After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 700362 - When accessing control-center via gnome-shell-search, one is not able to open another settings-comonent directly
When accessing control-center via gnome-shell-search, one is not able to open...
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: general
3.8.x
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-05-15 07:01 UTC by Stefan Bernhardsgrütter
Modified: 2013-05-18 22:06 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Handle repeated commandline parsing properly (1.25 KB, patch)
2013-05-18 01:37 UTC, Matthias Clasen
committed Details | Review

Description Stefan Bernhardsgrütter 2013-05-15 07:01:32 UTC
Steps to reproduce:

1. Type 'key' into the gnome-shell search-bar.
2. Now click on the control-center icon on the left side.The control-center opens with the preset search-string 'key'apperas.
3. Open the 'Sound Settings' direcly via the volumen-icon in gnome-shell. It does not open.

The same is true when accessing the 'Network-Settings', 'Background-Settings' ect. directly. The way of opening control-center via gnome-shell-search seams to block it for other ways of accessing it.
Comment 1 Matthias Clasen 2013-05-18 01:37:20 UTC
Created attachment 244592 [details] [review]
Handle repeated commandline parsing properly

The control-center may call g_option_context_parse repeatedly,
so we need to reset the static variables used to hold the parsing
results, otherwise things like the search string may leak from
a previous parsing run.
Comment 2 Bastien Nocera 2013-05-18 16:41:57 UTC
Review of attachment 244592 [details] [review]:

Looks good.
Comment 3 Matthias Clasen 2013-05-18 22:06:38 UTC
Attachment 244592 [details] pushed as beea258 - Handle repeated commandline parsing properly